# asr_world_model

./: .directory  CMakeLists.txt  License.txt  README.md  package.xml
include/world_model/: common_information_handler.hpp  complete_patterns_handler.hpp  found_object_handler.hpp  view_port_handler.hpp  world_model.hpp  world_model_visualizer_rviz.hpp
include/world_model/helper/: debug_helper.hpp  pose_helper.hpp
include/world_model/model/: model_object.hpp  model_type.hpp  settings.hpp
launch/: whole_test_system.launch  world_model.launch
log/: rosconsole.config
msg/: CompletePattern.msg
param/: world_model_settings.yaml
rsc/: DynamicParameters.cfg  IntermediateObject_scene_25th_may.sqlite.xml  world_model_settings.yaml
rsc/world_descriptions/: world_description.yaml  world_description_25th_may.yaml  world_description_exp1_summer_2015.yaml  world_description_exp2_summer_2015.yaml  world_description_initialsearch.yaml  world_description_scene_florian.yaml
src/: common_information_handler.cpp  complete_patterns_handler.cpp  found_object_handler.cpp  found_object_test.py  view_port_handler.cpp  world_model.cpp  world_model_main.cpp  world_model_stand_alone_scenario.py  world_model_visualizer_rviz.cpp
src/helper/: debug_helper.cpp  pose_helper.cpp
src/model/: model_object.cpp  model_type.cpp  settings.cpp
srv/: EmptyViewportList.srv  FilterViewportDependingOnAlreadyVisitedViewports.srv  GetAllObjectsList.srv  GetCompletePatterns.srv  GetFoundObjectList.srv  GetIntermediateObjectWeight.srv  GetMissingObjectList.srv  GetRecognizerName.srv  GetViewportList.srv  PushCompletePatterns.srv  PushFoundObject.srv  PushFoundObjectList.srv  PushViewport.srv  VisualizeSampledPoses.srv
test/standard_tests/: test_world_model.py  test_world_model_with_scene_recognition.py
test/unit_tests/: world_model_test.py  world_model_with_recognizer_prediction.py
